--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,210 @@
+// COLORS
+
+:root {
+    --primary-dark: #3c4ef3;
+    --primary-light: #eceeff;
+    --secondary-dark: #050520;
+    --secondary-light: #4a4f78;
+    --header-border: #121233;
+}
+
+// RESET
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.5;
+}
+
+// COMMON
+
 .container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .heading {
+    font-size: 4rem;
+    font-weight: 700;
+    color: var(--secondary-dark);
 }
 .paragraph {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: var(--secondary-light);
 }
 
+//HERO
+.hero {
+    background: var(--secondary-dark);
 
+    .hero__info {
+        text-align: center;
+        padding: 8rem 0;
+        .hero__label {
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: rgba(255, 255, 255, 0.5);
+        }
+        .hero__title {
+            font-weight: 700;
+            color: #fff;
+            font-size: 60px;
+        }
+        .hero__rating {
+        }
+        .hero__tags {
+            .hero__tags_item {
+            }
+        }
+    }
+
+    .hero__contact {
+        border-top: 1px solid var(--header-border);
+        .hero__contact_link {
+        }
+    }
+}
+
+//HEADER
+
+.header {
+    border-bottom: 1px solid #ddd;
+
+    .header__brand {
+    }
+    .header__nav {
+        .header__nav_link {
+            &.header__nav_link--active {
+            }
+        }
+    }
+}
+
+//FOOTER
+
+.footer {
+    background: var(--secondary-dark);
+    padding: 5rem 0;
+
+    .display-grid {
+        display: grid;
+
+        &.three-column {
+            grid-template-columns: repeat(3, minmax(25rem, max-content));
+            gap: 0 4rem;
+        }
+    }
+
+    .footer__head {
+        color: #fff;
+        font-size: 2.4rem;
+        font-weight: 600;
+        margin-bottom: 2rem;
+    }
+
+    .footer__para {
+        color: rgba(255, 255, 255, 0.5);
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        small {
+            font-size: 1.2rem;
+            display: flex;
+        }
+    }
+
+    .footer__about {
+    }
+
+    .footer__address {
+        .footer__social {
+            display: flex;
+            gap: 1.6rem;
+            .footer__social_link {
+                color: rgba(255, 255, 255, 0.5);
+                i {
+                    font-size: 3.2rem;
+                }
+
+                &:hover {
+                    color: rgba(255, 255, 255, 1);
+                }
+            }
+        }
+    }
+
+    .footer__bizhrs {
+    }
+
+    .footer__copy {
+        color: rgba(255, 255, 255, 0.3);
+        border-top: 1px solid var(--header-border);
+        font-size: 1.6rem;
+        padding-top: 2.4rem;
+        text-align: center;
+        margin-top: 2.4rem;
+    }
+}
+
+//ABOUT
+
+//PRODUCT
+
+.product {
+    padding: 8rem 0;
+}
+
+.reseller {
+    padding: 8rem 0;
+
+    .reseller__list {
+        .reseller__list_item {
+            > img {
+            }
+        }
+    }
+}
+
+//CONTACT
