--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,7 @@ img {
 
 button,
 input,
+select,
 textarea {
     font-family: 'Poppins', sans-serif;
 }
@@ -364,6 +365,80 @@ body {
 //PRODUCT
 .product {
     padding: 8rem 0;
+
+    .product__select {
+        margin: 4rem auto;
+        display: flex;
+        justify-content: center;
+        .custom_Select {
+            border-radius: 4px;
+            padding: 1.6rem 2.4rem;
+            width: 100%;
+            max-width: 350px;
+            font-size: 1.6rem;
+            font-weight: 600;
+            color: var(--primary-dark);
+            border: 2px solid var(--primary-dark);
+            min-height: 6rem;
+            border-radius: 5rem;
+            outline: 0;
+            appearance: none;
+            position: relative;
+            background-color: #fff;
+            background-image: url('../images/arrow.png');
+            background-repeat: no-repeat;
+            background-position: center right 2.4rem;
+
+            option {
+                color: var(--secondary-dark);
+            }
+        }
+    }
+
+    .product__list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 3rem;
+        .product__item {
+            border: 1px solid #d8dbf4;
+            border-radius: 0.4rem;
+            &.best_Seller {
+            }
+
+            .product__details {
+                display: flex;
+                justify-content: flex-end;
+            }
+            .product__img {
+                display: flex;
+                justify-content: center;
+            }
+            .product__title {
+                font-size: 2.2rem;
+                text-align: center;
+                color: var(--secondary-dark);
+            }
+            .product__price {
+                font-size: 2rem;
+                text-align: center;
+                color: var(--secondary-light);
+            }
+            .product__size {
+                .product__size_item {
+                    &.product__size_item--active {
+                    }
+                    &.product__size_item--off {
+                    }
+                }
+            }
+            .product__method {
+                .product__method_item {
+                    &.product__method_item--off {
+                    }
+                }
+            }
+        }
+    }
 }
 
 //RESELLER
