--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,4 @@
 // COLORS
-
 :root {
     --primary-dark: #3c4ef3;
     --primary-light: #eceeff;
@@ -9,7 +8,6 @@
 }
 
 // RESET
-
 *,
 *:before,
 *:after {
@@ -338,20 +336,17 @@ body {
     .about__profile {
         text-align: center;
         margin-top: 6rem;
-
         .about__pic {
             max-width: 260px;
             max-height: 260px;
             border-radius: 50%;
         }
-
         .about__name {
             margin-top: 2rem;
             font-size: 3.2rem;
             font-weight: 600;
             color: var(--primary-dark);
         }
-
         .about__designation {
             margin-top: 0.5rem;
             margin-bottom: 2rem;
@@ -365,9 +360,8 @@ body {
 //PRODUCT
 .product {
     padding: 8rem 0;
-
     .product__select {
-        margin: 4rem auto;
+        margin: 4rem auto 6rem auto;
         display: flex;
         justify-content: center;
         .custom_Select {
@@ -388,54 +382,123 @@ body {
             background-image: url('../images/arrow.png');
             background-repeat: no-repeat;
             background-position: center right 2.4rem;
-
             option {
                 color: var(--secondary-dark);
             }
         }
     }
-
     .product__list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 3rem;
+        gap: 2.4rem;
         .product__item {
             border: 1px solid #d8dbf4;
             border-radius: 0.4rem;
-            &.best_Seller {
-            }
+            position: relative;
 
             .product__details {
-                display: flex;
-                justify-content: flex-end;
+                display: inline-flex;
+                position: absolute;
+                font-size: 1.8rem;
+                right: 1.6rem;
+                top: 1.6rem;
+                color: var(--secondary-light);
             }
             .product__img {
                 display: flex;
                 justify-content: center;
+                padding: 1.6rem 0;
             }
             .product__title {
                 font-size: 2.2rem;
+                font-weight: 600;
                 text-align: center;
                 color: var(--secondary-dark);
             }
             .product__price {
                 font-size: 2rem;
+                font-weight: 600;
                 text-align: center;
                 color: var(--secondary-light);
+                margin-top: 0.5rem;
+                margin-bottom: 0.5rem;
+
+                i {
+                    margin-right: 1rem;
+                    font-size: 1.8rem;
+                }
             }
             .product__size {
+                display: grid;
+                gap: 0.5rem;
+                grid-template-columns: repeat(5, minmax(5rem, 6rem));
+                padding: 1rem 2rem;
+                justify-content: center;
+
                 .product__size_item {
+                    border: 1px dashed #d8dbf4;
+                    background-color: #fff;
+                    border-radius: 0.4rem;
+                    padding: 0.5rem;
+                    text-align: center;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    span {
+                        font-size: 1.2rem;
+                        font-weight: 600;
+                        color: var(--secondary-dark);
+                    }
+
+                    small {
+                        font-size: 1.1rem;
+                        color: var(--secondary-light);
+                    }
+
                     &.product__size_item--active {
                     }
                     &.product__size_item--off {
+                        filter: blur(100%);
                     }
                 }
             }
             .product__method {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                padding: 1.6rem;
+                padding-top: 0;
                 .product__method_item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 0.5rem;
+
+                    i {
+                        font-size: 2.4rem;
+                    }
+
+                    span {
+                        display: inline-flex;
+                        margin-top: 0.6rem;
+                        font-size: 1.4rem;
+                        font-weight: 600;
+                    }
+
                     &.product__method_item--off {
+                        opacity: 0.3;
                     }
                 }
+            }
+            .product__patch {
+                display: flex;
+                background-color: #eceeff;
+                height: 11rem;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                z-index: -1;
             }
         }
     }
@@ -444,7 +507,6 @@ body {
 //RESELLER
 .reseller {
     padding: 8rem 0;
-
     .reseller__list {
         display: grid;
         flex-wrap: wrap;
@@ -469,7 +531,6 @@ body {
 //CONTACT
 .contact {
     padding: 8rem 0;
-
     .contact__form {
         margin-top: 6rem;
         display: grid;
