--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,47 @@
+//RESPONSIVE
+
+//For Extra Small
+@mixin xsm {
+    @media screen and (max-width: 375px) {
+        @content;
+    }
+}
+
+//For Small
+@mixin sm {
+    @media screen and (max-width: 576px) {
+        @content;
+    }
+}
+
+//For Medium
+@mixin md {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+//For large
+@mixin lg {
+    @media screen and (max-width: 992px) {
+        @content;
+    }
+}
+
+//For Extra Large
+@mixin xl {
+    @media screen and (max-width: 1200px) {
+        @content;
+    }
+}
+
+//For Extra Extra Large
+@mixin xxl {
+    @media screen and (max-width: 1400px) {
+        @content;
+    }
+}
+
 // COLORS
 :root {
     --primary-dark: #3c4ef3;
@@ -74,6 +118,10 @@ body {
     margin-bottom: 3rem;
     text-align: center;
 
+    @include md {
+        font-size: 3rem;
+    }
+
     &::after {
         content: '';
         position: absolute;
@@ -103,7 +151,7 @@ body {
 
     .hero__info {
         text-align: center;
-        padding: 9rem 0 4rem 0;
+        padding: 9rem 2rem 4rem 2rem;
         .hero__label {
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -113,6 +161,14 @@ body {
             font-weight: 700;
             color: #fff;
             font-size: 6rem;
+
+            @include md {
+                font-size: 5rem;
+            }
+
+            @include sm {
+                font-size: 4rem;
+            }
         }
         .hero__rating {
             display: flex;
@@ -136,10 +192,15 @@ body {
         }
         .hero__tags {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: center;
             gap: 0.8rem 1.4rem;
             margin-top: 1.6rem;
+
+            @include sm {
+                gap: 0.8rem;
+            }
 
             .hero__tags_item {
                 padding: 0.6rem 1.6rem;
@@ -149,18 +210,43 @@ body {
                 color: #ffffff;
             }
         }
+
+        .hero__toggle {
+            padding-top: 2.4rem;
+            display: none;
+
+            @include md {
+                display: block;
+            }
+
+            i {
+                font-size: 3rem;
+                color: var(--secondary-light);
+            }
+        }
     }
 
     .hero__contact {
         border-top: 1px solid var(--header-border);
-        padding: 2rem 0;
+        padding: 2rem;
         min-height: 6rem;
+
+        @include md {
+            display: none;
+        }
 
         .hero__contact_action {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: center;
             gap: 1.6rem 4rem;
+
+            @include sm {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
             .hero__contact_link {
                 display: inline-flex;
                 align-items: center;
@@ -190,7 +276,7 @@ body {
 
 //HEADER
 .header {
-    padding: 2rem 0;
+    padding: 2rem;
     background: #fff;
     border-bottom: 1px solid #ddd;
     position: sticky;
@@ -225,6 +311,25 @@ body {
                 font-size: 1.8rem;
                 font-weight: 600;
                 color: var(--secondary-light);
+
+                @include sm {
+                    display: none;
+                }
+            }
+        }
+
+        .header__toggle {
+            font-size: 2.2rem;
+            color: var(--secondary-dark);
+            cursor: pointer;
+            margin-right: 0;
+            margin-left: auto;
+            padding: 0.8rem;
+            line-height: 0;
+            display: none;
+
+            @include md {
+                display: inline-block;
             }
         }
 
@@ -233,6 +338,20 @@ body {
             gap: 1rem 3rem;
             margin-left: auto;
             margin-right: 0;
+
+            @include md {
+                background: var(--primary-light);
+                padding: 10px;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                display: none;
+            }
+
             .header__nav_link {
                 display: inline-flex;
                 padding: 0.5rem;
@@ -251,27 +370,15 @@ body {
 //FOOTER
 .footer {
     background: var(--secondary-dark);
-    padding: 5rem 0;
+    padding: 5rem 2rem;
 
     .footer__area {
         display: grid;
-        grid-template-columns: repeat(3, 40% 30% 30%);
+        grid-template-columns: repeat(3, 1fr);
         gap: 3rem;
-        grid-template-areas:
-            'a-about a-address a-bizhrs'
-            'a-copy a-copy a-copy';
 
-        .area-about {
-            grid-area: a-about;
-        }
-        .area-address {
-            grid-area: a-address;
-        }
-        .area-bizhrs {
-            grid-area: a-bizhrs;
-        }
-        .area-copy {
-            grid-area: a-copy;
+        @include md {
+            grid-template-columns: repeat(1, 1fr);
         }
     }
 
@@ -280,12 +387,16 @@ body {
         font-size: 2.4rem;
         font-weight: 600;
         margin-bottom: 2rem;
+
+        @include md {
+            font-size: 2rem;
+        }
     }
 
     .footer__para {
         color: rgba(255, 255, 255, 0.5);
         font-size: 1.6rem;
-        margin-bottom: 2rem;
+        margin-bottom: 1.6rem;
 
         &:last-child {
             margin-bottom: 0;
@@ -332,7 +443,12 @@ body {
 
 //ABOUT
 .about {
-    padding: 8rem 0;
+    padding: 8rem 2rem;
+
+    @include sm {
+        padding: 4rem 2rem;
+    }
+
     .about__profile {
         text-align: center;
         margin-top: 6rem;
@@ -340,6 +456,11 @@ body {
             max-width: 260px;
             max-height: 260px;
             border-radius: 50%;
+
+            @include sm {
+                max-width: 200px;
+                max-height: 200px;
+            }
         }
         .about__name {
             margin-top: 2rem;
@@ -359,10 +480,18 @@ body {
 
 //PRODUCT
 .product {
-    padding: 8rem 0;
-    .product__select {
-        margin: 4rem auto 6rem auto;
+    padding: 8rem 2rem;
+
+    @include md {
+        padding: 4rem 2rem;
+    }
+
+    .product__action {
+        margin: 4rem auto 4rem auto;
         display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+        align-items: center;
         justify-content: center;
         .custom_Select {
             border-radius: 4px;
@@ -386,10 +515,92 @@ body {
                 color: var(--secondary-dark);
             }
         }
+        .custom_Switch {
+            .button {
+                position: relative;
+                width: 60px;
+                height: 30px;
+                overflow: hidden;
+
+                .knobs,
+                .layer {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                }
+
+                .layer {
+                    width: 100%;
+                    background-color: #d8ffee;
+                    transition: 0.3s ease all;
+                    z-index: 1;
+                    border-radius: 100px;
+                    border: 1px solid #009354;
+                }
+
+                .knobs {
+                    z-index: 2;
+                }
+
+                .knobs:before,
+                .knobs:after {
+                    content: '';
+                    position: absolute;
+                    top: 5px;
+                    left: 5px;
+                    width: 20px;
+                    height: 20px;
+                    background-color: #009354;
+                    border-radius: 50%;
+                    transition: 0.3s ease all;
+                }
+
+                .knobs:before {
+                    content: '';
+                }
+
+                .knobs:after {
+                    content: '';
+                }
+
+                .knobs:after {
+                    right: -28px;
+                    left: auto;
+                    background-color: #e53035;
+                }
+
+                .checkbox {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    padding: 0;
+                    margin: 0;
+                    opacity: 0;
+                    cursor: pointer;
+                    z-index: 3;
+                }
+
+                .checkbox:checked + .knobs:before {
+                    left: -30px;
+                }
+
+                .checkbox:checked + .knobs:after {
+                    right: 5px;
+                }
+
+                .checkbox:checked ~ .layer {
+                    background-color: #fad7d8;
+                    border: 1px solid #e53035;
+                }
+            }
+        }
     }
     .product__list {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        justify-content: center;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 370px));
         gap: 2.4rem;
         .product__item {
             border: 1px solid #d8dbf4;
@@ -419,7 +630,7 @@ body {
                 font-size: 2rem;
                 font-weight: 600;
                 text-align: center;
-                color: var(--secondary-light);
+                color: var(--primary-dark);
                 margin-top: 0.5rem;
                 margin-bottom: 0.5rem;
 
@@ -431,15 +642,16 @@ body {
             .product__size {
                 display: grid;
                 gap: 0.5rem;
-                grid-template-columns: repeat(5, minmax(5rem, 6rem));
+                grid-template-columns: repeat(auto-fit, auto);
                 padding: 1rem 2rem;
                 justify-content: center;
+                align-items: center;
 
                 .product__size_item {
-                    border: 1px dashed #d8dbf4;
+                    border: 1px solid #d8dbf4;
                     background-color: #fff;
                     border-radius: 0.4rem;
-                    padding: 0.5rem;
+                    padding: 0.5rem 0.8rem;
                     text-align: center;
                     display: flex;
                     flex-direction: column;
@@ -457,6 +669,12 @@ body {
                     }
 
                     &.product__size_item--active {
+                        border-color: var(--primary-dark);
+
+                        span,
+                        small {
+                            color: var(--primary-dark);
+                        }
                     }
                     &.product__size_item--off {
                         filter: blur(100%);
@@ -506,13 +724,23 @@ body {
 
 //RESELLER
 .reseller {
-    padding: 8rem 0;
+    padding: 0 2rem 8rem 2rem;
+
+    @include md {
+        padding: 0 2rem 4rem 2rem;
+    }
+
     .reseller__list {
         display: grid;
-        flex-wrap: wrap;
-        grid-template-columns: repeat(5, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+        justify-content: center;
         gap: 3rem;
         margin-top: 4rem;
+
+        @include md {
+            gap: 2rem;
+        }
+
         .reseller__list_item {
             display: inline-flex;
             align-items: center;
@@ -530,17 +758,33 @@ body {
 
 //CONTACT
 .contact {
-    padding: 8rem 0;
+    padding: 8rem 2rem;
+
+    @include md {
+        padding: 4rem 2rem;
+    }
+
     .contact__form {
         margin-top: 6rem;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
         gap: 4rem 3rem;
         grid-template-areas:
             'a-name a-email'
             'a-mobile a-subject'
             'a-message a-message'
             'a-send a-send';
+
+        @include md {
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-areas:
+                'a-name'
+                'a-email'
+                'a-mobile'
+                'a-subject'
+                'a-message'
+                'a-send';
+        }
 
         .area-name {
             grid-area: a-name;
@@ -619,8 +863,38 @@ body {
 
 .map {
     line-height: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem 2rem;
+    padding: 0 2rem 2rem 2rem;
+
+    @include md {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 2rem;
+    }
+
     iframe {
         margin: 0;
         padding: 0;
+    }
+
+    .map__office,
+    .map__factory {
+        .map__head {
+            font-size: 1.8rem;
+            font-weight: 600;
+            color: var(--secondary-dark);
+            padding: 2rem 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        iframe {
+            border: 1px solid #c2c4d3;
+            overflow: hidden;
+            border-radius: 0.6rem;
+            position: relative;
+        }
     }
 }
