--- a/css/about.scss
+++ b/css/about.scss
@@ -1,1 +1,38 @@
-.about{}
+@import '_root.scss';
+
+//ABOUT
+.about {
+    padding: 8rem 2rem;
+
+    @include sm {
+        padding: 4rem 2rem;
+    }
+
+    .about__profile {
+        text-align: center;
+        margin-top: 6rem;
+        .about__pic {
+            max-width: 240px;
+            max-height: 240px;
+            border-radius: 50%;
+
+            @include sm {
+                max-width: 200px;
+                max-height: 200px;
+            }
+        }
+        .about__name {
+            margin-top: 2rem;
+            font-size: 3.2rem;
+            font-weight: 600;
+            color: var(--primary-dark);
+        }
+        .about__designation {
+            margin-top: 0.5rem;
+            margin-bottom: 2rem;
+            font-size: 1.8rem;
+            font-weight: 600;
+            color: var(--secondary-dark);
+        }
+    }
+}
