--- a/css/product.scss
+++ b/css/product.scss
@@ -1,2 +1,290 @@
+@import '_root.scss';
+//PRODUCT
 .product {
+    padding: 8rem 2rem;
+
+    @include md {
+        padding: 4rem 2rem;
+    }
+
+    .product__action {
+        margin: 4rem auto 4rem auto;
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+        align-items: center;
+        justify-content: center;
+        .custom_Select {
+            border-radius: 4px;
+            padding: 1.2rem 2.4rem;
+            width: 100%;
+            max-width: 300px;
+            font-size: 1.6rem;
+            font-weight: 600;
+            color: var(--primary-dark);
+            border: 2px solid var(--primary-dark);
+            min-height: 5rem;
+            border-radius: 5rem;
+            outline: 0;
+            appearance: none;
+            position: relative;
+            background-color: #fff;
+            background-image: url('../images/arrow.png');
+            background-repeat: no-repeat;
+            background-position: center right 2.4rem;
+
+            @include md {
+                font-size: 1.4rem;
+            }
+
+            option {
+                color: var(--secondary-dark);
+            }
+        }
+
+        .custom_Filter {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1rem;
+            margin-top: 2rem;
+            > .custom_Filter__btn {
+                display: inline-flex;
+                align-items: center;
+                column-gap: 0.8rem;
+                font-size: 1.2rem;
+                font-weight: 500;
+                border-radius: 4px;
+                padding: 0.5rem 1.4rem;
+                border: 1px solid var(--primary-light);
+                color: var(--secondary-dark);
+                cursor: pointer;
+
+                &.custom_Filter__btn--active {
+                    border-color: var(--primary-dark);
+                    color: var(--primary-dark);
+                }
+            }
+        }
+    }
+    .product__list {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 372px));
+        gap: 2.4rem;
+
+        @include sm {
+            grid-template-columns: repeat(auto-fit, minmax(260px, 372px));
+        }
+
+        .product__item {
+            border: 1px solid #d8dbf4;
+            border-radius: 0.4rem;
+            position: relative;
+
+            &.product__best_seller::after {
+                color: #fff;
+                font-size: 1.2rem;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                margin: 0 auto;
+                width: max-content;
+                padding: 0 1rem;
+                border-radius: 0 0 4px 4px;
+            }
+
+            &.product__best_seller::after {
+                content: 'Best Seller';
+                background-color: #e53035;
+                color: #fff;
+            }
+
+            &.product__veg::before,
+            &.product__non_veg::before {
+                content: '';
+                position: absolute;
+                top: 1rem;
+                left: 1rem;
+                right: 0;
+                height: 6px;
+                border-radius: 6px;
+                width: 6px;
+            }
+
+            &.product__veg::before {
+                background-color: #009354;
+            }
+
+            &.product__non_veg::before {
+                background-color: #e53035;
+            }
+
+            .product__details {
+                display: inline-flex;
+                position: absolute;
+                font-size: 1.8rem;
+                right: 1.6rem;
+                top: 1.6rem;
+                color: var(--secondary-light);
+            }
+
+            .product__img {
+                display: flex;
+                justify-content: center;
+                padding: 2rem;
+            }
+
+            .product__title {
+                font-size: 2.2rem;
+                font-weight: 600;
+                text-align: center;
+                color: var(--secondary-dark);
+
+                @include md {
+                    font-size: 2rem;
+                }
+            }
+
+            .product__price {
+                font-size: 2rem;
+                font-weight: 600;
+                text-align: center;
+                color: var(--primary-dark);
+                margin-top: 0.5rem;
+                margin-bottom: 0.5rem;
+
+                i {
+                    margin-right: 1rem;
+                    font-size: 1.8rem;
+
+                    @include md {
+                        font-size: 1.6rem;
+                    }
+                }
+            }
+
+            .product__size {
+                display: grid;
+                gap: 0.5rem;
+                grid-template-columns: repeat(auto-fit, minmax(55px, 55px));
+                padding: 1rem;
+                padding-bottom: 2rem;
+                justify-content: center;
+                align-items: center;
+
+                .product__size_item {
+                    border: 1px solid #d8dbf4;
+                    background-color: #fff;
+                    border-radius: 0.4rem;
+                    padding: 0.5rem;
+                    text-align: center;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    span {
+                        font-size: 1.2rem;
+                        font-weight: 600;
+                        color: var(--secondary-dark);
+                    }
+
+                    small {
+                        font-size: 1.1rem;
+                        color: var(--secondary-light);
+                    }
+
+                    &.product__size_item--active {
+                        border-color: var(--primary-dark);
+
+                        span,
+                        small {
+                            color: var(--primary-dark);
+                        }
+                    }
+                }
+            }
+
+            .product__method {
+                display: grid;
+                align-items: baseline;
+                justify-content: center;
+                grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+                padding: 1.6rem;
+                background-color: #eceeff;
+
+                @include sm {
+                    padding: 1.6rem 1rem;
+                }
+
+                .product__method_item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 0.5rem;
+
+                    i {
+                        font-size: 2.4rem;
+                    }
+
+                    span {
+                        display: inline-flex;
+                        margin-top: 0.6rem;
+                        font-size: 1.4rem;
+                        font-weight: 600;
+
+                        @include md {
+                            font-size: 1.2rem;
+                        }
+                    }
+                }
+            }
+
+            .product__patch {
+                display: none;
+                background-color: #eceeff;
+                height: 11rem;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                z-index: -1;
+            }
+        }
+    }
+}
+
+//RESELLER
+.reseller {
+    padding: 0 2rem 8rem 2rem;
+
+    @include md {
+        padding: 0 2rem 4rem 2rem;
+    }
+
+    .reseller__list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        justify-content: center;
+        gap: 3rem;
+        margin-top: 4rem;
+
+        @include md {
+            gap: 2rem;
+        }
+
+        .reseller__list_item {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 10rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 1rem;
+            > img {
+                max-height: 100%;
+            }
+        }
+    }
 }
