--- a/css/style.scss
+++ b/css/style.scss
@@ -1,60 +1,9 @@
-//RESPONSIVE
-
-//For Extra Small
-@mixin xsm {
-    @media screen and (max-width: 375px) {
-        @content;
-    }
-}
-
-//For Small
-@mixin sm {
-    @media screen and (max-width: 576px) {
-        @content;
-    }
-}
-
-//For Medium
-@mixin md {
-    @media screen and (max-width: 768px) {
-        @content;
-    }
-}
-
-//For large
-@mixin lg {
-    @media screen and (max-width: 992px) {
-        @content;
-    }
-}
-
-//For Extra Large
-@mixin xl {
-    @media screen and (max-width: 1200px) {
-        @content;
-    }
-}
-
-//For Extra Extra Large
-@mixin xxl {
-    @media screen and (max-width: 1400px) {
-        @content;
-    }
-}
-
-// COLORS
-:root {
-    --primary-dark: #3c4ef3;
-    --primary-light: #eceeff;
-    --secondary-dark: #050520;
-    --secondary-light: #4a4f78;
-    --header-border: #121233;
-}
+@import '_root.scss';
 
 // RESET
 *,
-*:before,
-*:after {
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -100,6 +49,10 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
+
+    @include md {
+        font-size: 1.4rem;
+    }
 }
 
 // COMMON
@@ -143,6 +96,10 @@ body {
     text-align: center;
     max-width: 80rem;
     margin: 0 auto;
+
+    @include md {
+        font-size: 1.4rem;
+    }
 }
 
 //HERO
@@ -151,7 +108,7 @@ body {
 
     .hero__info {
         text-align: center;
-        padding: 9rem 2rem 4rem 2rem;
+        padding: 10rem 2rem 4rem 2rem;
         .hero__label {
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -210,30 +167,12 @@ body {
                 color: #ffffff;
             }
         }
-
-        .hero__toggle {
-            padding-top: 2.4rem;
-            display: none;
-
-            @include md {
-                display: block;
-            }
-
-            i {
-                font-size: 3rem;
-                color: var(--secondary-light);
-            }
-        }
     }
 
     .hero__contact {
         border-top: 1px solid var(--header-border);
-        padding: 2rem;
-        min-height: 6rem;
-
-        @include md {
-            display: none;
-        }
+        padding: 1.8rem 2rem;
+        min-height: 7rem;
 
         .hero__contact_action {
             display: flex;
@@ -241,6 +180,10 @@ body {
             align-items: center;
             justify-content: center;
             gap: 1.6rem 4rem;
+
+            @include lg {
+                gap: 1rem 2rem;
+            }
 
             @include sm {
                 flex-direction: column;
@@ -254,6 +197,7 @@ body {
                 gap: 1.6rem;
                 text-decoration: none;
                 outline: 0;
+                font-size: 1.4rem;
 
                 i {
                     display: inline-flex;
@@ -282,7 +226,7 @@ body {
     position: sticky;
     top: 0;
     min-height: 80px;
-    z-index: 1;
+    z-index: 3;
 
     > .container {
         display: flex;
@@ -311,10 +255,6 @@ body {
                 font-size: 1.8rem;
                 font-weight: 600;
                 color: var(--secondary-light);
-
-                @include sm {
-                    display: none;
-                }
             }
         }
 
@@ -340,16 +280,20 @@ body {
             margin-right: 0;
 
             @include md {
+                display: none;
+            }
+
+            &.header__nav--toggle {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                row-gap: 0.5rem;
                 background: var(--primary-light);
                 padding: 10px;
                 position: absolute;
                 top: 100%;
                 left: 0;
                 width: 100%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                display: none;
             }
 
             .header__nav_link {
@@ -359,6 +303,11 @@ body {
                 font-size: 1.6rem;
                 font-weight: 500;
                 color: var(--secondary-light);
+
+                @include md {
+                    font-size: 1.4rem;
+                }
+
                 &.header__nav_link--active {
                     color: var(--primary-dark);
                 }
@@ -374,61 +323,65 @@ body {
 
     .footer__area {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, minmax(250px, max-content));
         gap: 3rem;
 
-        @include md {
+        @include lg {
             grid-template-columns: repeat(1, 1fr);
         }
-    }
 
-    .footer__head {
-        color: #fff;
-        font-size: 2.4rem;
-        font-weight: 600;
-        margin-bottom: 2rem;
+        .footer__head {
+            color: #fff;
+            font-size: 2.4rem;
+            font-weight: 600;
+            margin-bottom: 2rem;
 
-        @include md {
-            font-size: 2rem;
-        }
-    }
-
-    .footer__para {
-        color: rgba(255, 255, 255, 0.5);
-        font-size: 1.6rem;
-        margin-bottom: 1.6rem;
-
-        &:last-child {
-            margin-bottom: 0;
+            @include md {
+                font-size: 2rem;
+            }
         }
 
-        small {
-            font-size: 1.2rem;
-            display: flex;
+        .footer__para {
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 1.6rem;
+            margin-bottom: 1.6rem;
+
+            @include md {
+                font-size: 1.4rem;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            small {
+                font-size: 1.2rem;
+                display: flex;
+            }
         }
-    }
 
-    .footer__about {
-    }
+        .footer__about {
+        }
 
-    .footer__address {
-        .footer__social {
-            display: flex;
-            gap: 1.6rem;
-            .footer__social_link {
-                color: rgba(255, 255, 255, 0.5);
-                i {
-                    font-size: 3.2rem;
-                }
+        .footer__address {
+            .footer__social {
+                display: flex;
+                gap: 1.6rem;
+                .footer__social_link {
+                    color: rgba(255, 255, 255, 0.5);
+                    i {
+                        font-size: 3.2rem;
+                    }
 
-                &:hover {
-                    color: rgba(255, 255, 255, 1);
+                    &:hover {
+                        color: rgba(255, 255, 255, 1);
+                    }
                 }
             }
         }
-    }
 
-    .footer__bizhrs {
+        .footer__bizhrs {
+        }
     }
 
     .footer__copy {
@@ -438,463 +391,9 @@ body {
         padding-top: 2.4rem;
         text-align: center;
         margin-top: 2.4rem;
-    }
-}
-
-//ABOUT
-.about {
-    padding: 8rem 2rem;
-
-    @include sm {
-        padding: 4rem 2rem;
-    }
-
-    .about__profile {
-        text-align: center;
-        margin-top: 6rem;
-        .about__pic {
-            max-width: 260px;
-            max-height: 260px;
-            border-radius: 50%;
-
-            @include sm {
-                max-width: 200px;
-                max-height: 200px;
-            }
-        }
-        .about__name {
-            margin-top: 2rem;
-            font-size: 3.2rem;
-            font-weight: 600;
-            color: var(--primary-dark);
-        }
-        .about__designation {
-            margin-top: 0.5rem;
-            margin-bottom: 2rem;
-            font-size: 1.8rem;
-            font-weight: 600;
-            color: var(--secondary-dark);
-        }
-    }
-}
-
-//PRODUCT
-.product {
-    padding: 8rem 2rem;
-
-    @include md {
-        padding: 4rem 2rem;
-    }
-
-    .product__action {
-        margin: 4rem auto 4rem auto;
-        display: flex;
-        flex-direction: column;
-        gap: 1.6rem;
-        align-items: center;
-        justify-content: center;
-        .custom_Select {
-            border-radius: 4px;
-            padding: 1.6rem 2.4rem;
-            width: 100%;
-            max-width: 350px;
-            font-size: 1.6rem;
-            font-weight: 600;
-            color: var(--primary-dark);
-            border: 2px solid var(--primary-dark);
-            min-height: 6rem;
-            border-radius: 5rem;
-            outline: 0;
-            appearance: none;
-            position: relative;
-            background-color: #fff;
-            background-image: url('../images/arrow.png');
-            background-repeat: no-repeat;
-            background-position: center right 2.4rem;
-            option {
-                color: var(--secondary-dark);
-            }
-        }
-        .custom_Switch {
-            .button {
-                position: relative;
-                width: 60px;
-                height: 30px;
-                overflow: hidden;
-
-                .knobs,
-                .layer {
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    bottom: 0;
-                    left: 0;
-                }
-
-                .layer {
-                    width: 100%;
-                    background-color: #d8ffee;
-                    transition: 0.3s ease all;
-                    z-index: 1;
-                    border-radius: 100px;
-                    border: 1px solid #009354;
-                }
-
-                .knobs {
-                    z-index: 2;
-                }
-
-                .knobs:before,
-                .knobs:after {
-                    content: '';
-                    position: absolute;
-                    top: 5px;
-                    left: 5px;
-                    width: 20px;
-                    height: 20px;
-                    background-color: #009354;
-                    border-radius: 50%;
-                    transition: 0.3s ease all;
-                }
-
-                .knobs:before {
-                    content: '';
-                }
-
-                .knobs:after {
-                    content: '';
-                }
-
-                .knobs:after {
-                    right: -28px;
-                    left: auto;
-                    background-color: #e53035;
-                }
-
-                .checkbox {
-                    position: relative;
-                    width: 100%;
-                    height: 100%;
-                    padding: 0;
-                    margin: 0;
-                    opacity: 0;
-                    cursor: pointer;
-                    z-index: 3;
-                }
-
-                .checkbox:checked + .knobs:before {
-                    left: -30px;
-                }
-
-                .checkbox:checked + .knobs:after {
-                    right: 5px;
-                }
-
-                .checkbox:checked ~ .layer {
-                    background-color: #fad7d8;
-                    border: 1px solid #e53035;
-                }
-            }
-        }
-    }
-    .product__list {
-        display: grid;
-        justify-content: center;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 370px));
-        gap: 2.4rem;
-        .product__item {
-            border: 1px solid #d8dbf4;
-            border-radius: 0.4rem;
-            position: relative;
-
-            .product__details {
-                display: inline-flex;
-                position: absolute;
-                font-size: 1.8rem;
-                right: 1.6rem;
-                top: 1.6rem;
-                color: var(--secondary-light);
-            }
-            .product__img {
-                display: flex;
-                justify-content: center;
-                padding: 1.6rem 0;
-            }
-            .product__title {
-                font-size: 2.2rem;
-                font-weight: 600;
-                text-align: center;
-                color: var(--secondary-dark);
-            }
-            .product__price {
-                font-size: 2rem;
-                font-weight: 600;
-                text-align: center;
-                color: var(--primary-dark);
-                margin-top: 0.5rem;
-                margin-bottom: 0.5rem;
-
-                i {
-                    margin-right: 1rem;
-                    font-size: 1.8rem;
-                }
-            }
-            .product__size {
-                display: grid;
-                gap: 0.5rem;
-                grid-template-columns: repeat(auto-fit, auto);
-                padding: 1rem 2rem;
-                justify-content: center;
-                align-items: center;
-
-                .product__size_item {
-                    border: 1px solid #d8dbf4;
-                    background-color: #fff;
-                    border-radius: 0.4rem;
-                    padding: 0.5rem 0.8rem;
-                    text-align: center;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    span {
-                        font-size: 1.2rem;
-                        font-weight: 600;
-                        color: var(--secondary-dark);
-                    }
-
-                    small {
-                        font-size: 1.1rem;
-                        color: var(--secondary-light);
-                    }
-
-                    &.product__size_item--active {
-                        border-color: var(--primary-dark);
-
-                        span,
-                        small {
-                            color: var(--primary-dark);
-                        }
-                    }
-                    &.product__size_item--off {
-                        filter: blur(100%);
-                    }
-                }
-            }
-            .product__method {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                padding: 1.6rem;
-                padding-top: 0;
-                .product__method_item {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
-                    padding: 0.5rem;
-
-                    i {
-                        font-size: 2.4rem;
-                    }
-
-                    span {
-                        display: inline-flex;
-                        margin-top: 0.6rem;
-                        font-size: 1.4rem;
-                        font-weight: 600;
-                    }
-
-                    &.product__method_item--off {
-                        opacity: 0.3;
-                    }
-                }
-            }
-            .product__patch {
-                display: flex;
-                background-color: #eceeff;
-                height: 11rem;
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                z-index: -1;
-            }
-        }
-    }
-}
-
-//RESELLER
-.reseller {
-    padding: 0 2rem 8rem 2rem;
-
-    @include md {
-        padding: 0 2rem 4rem 2rem;
-    }
-
-    .reseller__list {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, auto));
-        justify-content: center;
-        gap: 3rem;
-        margin-top: 4rem;
 
         @include md {
-            gap: 2rem;
-        }
-
-        .reseller__list_item {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 10rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            padding: 1rem;
-            > img {
-                max-height: 100%;
-            }
-        }
-    }
-}
-
-//CONTACT
-.contact {
-    padding: 8rem 2rem;
-
-    @include md {
-        padding: 4rem 2rem;
-    }
-
-    .contact__form {
-        margin-top: 6rem;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 4rem 3rem;
-        grid-template-areas:
-            'a-name a-email'
-            'a-mobile a-subject'
-            'a-message a-message'
-            'a-send a-send';
-
-        @include md {
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-areas:
-                'a-name'
-                'a-email'
-                'a-mobile'
-                'a-subject'
-                'a-message'
-                'a-send';
-        }
-
-        .area-name {
-            grid-area: a-name;
-        }
-        .area-email {
-            grid-area: a-email;
-        }
-        .area-mobile {
-            grid-area: a-mobile;
-        }
-        .area-subject {
-            grid-area: a-subject;
-        }
-        .area-message {
-            grid-area: a-message;
-        }
-        .area-send {
-            grid-area: a-send;
-        }
-
-        .form_group {
-            position: relative;
-            .form_label {
-                display: inline-flex;
-                font-size: 1.4rem;
-                position: absolute;
-                top: -1.2rem;
-                left: 1rem;
-                padding: 0.2rem 1rem;
-                background: #fff;
-                color: var(--secondary-light);
-            }
-            .form_control {
-                width: 100%;
-                padding: 0.9rem 1.2rem;
-                height: 100%;
-                min-height: 5rem;
-                border: 2px solid #666a92;
-                border-radius: 4px;
-                outline: 0;
-                transition: 300ms border;
-                font-size: 1.6rem;
-                color: var(--secondary-dark);
-
-                &:focus {
-                    border: 2px solid var(--primary-dark);
-                }
-            }
-        }
-
-        .btn_send_message {
-            padding: 1.2rem;
-            min-height: 6rem;
-            font-size: 1.8rem;
-            font-weight: 500;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            max-width: 450px;
-            margin-left: auto;
-            margin-right: auto;
-            color: #fff;
-            background: var(--primary-dark);
-            outline: 0;
-            border-radius: 4px;
-            border: 0;
-            cursor: pointer;
-            i {
-                font-size: 20px;
-                margin-right: 1.4rem;
-            }
-        }
-    }
-}
-
-.map {
-    line-height: 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 4rem 2rem;
-    padding: 0 2rem 2rem 2rem;
-
-    @include md {
-        grid-template-columns: repeat(1, 1fr);
-        gap: 2rem;
-    }
-
-    iframe {
-        margin: 0;
-        padding: 0;
-    }
-
-    .map__office,
-    .map__factory {
-        .map__head {
-            font-size: 1.8rem;
-            font-weight: 600;
-            color: var(--secondary-dark);
-            padding: 2rem 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        iframe {
-            border: 1px solid #c2c4d3;
-            overflow: hidden;
-            border-radius: 0.6rem;
-            position: relative;
+            font-size: 1.4rem;
         }
     }
 }
